# shlibnet

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: codeql.yml
ShlibNet/: Server.cpp  Server.h  Socket.cpp  Socket.h
include/ShlibNet/: Socket.h
include/shlibnet/: Protocol.h  Socket.h
src/ShlibNet/: Server.cpp  Socket.cpp
src/shlibnet/: Socket.cpp
